[MOD/#20] 대학 일정 조회 API DB 구조 변경 반영